pet list json added

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -10,7 +10,7 @@
   .footer-whole {
     display: flex;
     padding: 15px;
-    height: 214px;
+    // height: 214px;
     max-width: 1277px;
     margin: auto;
   }
