--- a/src/pages/howitsworks/Howitsworks.scss
+++ b/src/pages/howitsworks/Howitsworks.scss
@@ -43,14 +43,12 @@
             text-align: center;
 
             h1 {
-
                 font-size: 36px;
                 font-weight: 700;
                 color: #000000;
             }
 
             h3 {
-
                 font-size: 24px;
                 margin: 1rem 0;
                 display: flex;
@@ -58,7 +56,6 @@
                 font-weight: 500;
                 justify-content: center;
                 align-items: center;
-
 
                 .icon-img {
                     width: 22px;
@@ -104,32 +101,60 @@
         }
     }
 
-    @media (max-width: 768px) {
-        .pet-container {
-            .step {
-                flex-direction: column !important;
-                text-align: center;
 
-                .text {
-                    h1 {
-                        font-size: 24px;
-                    }
 
-                    h3 {
-                        font-size: 16px;
-                    }
-                }
+    @media (max-width: 900px) {
+        .step {
+            flex-direction: column !important;
+            text-align: center;
+
+            .step-img {
+                max-width: 220px;
+                position: static !important;
+
             }
 
-            .paw {
-                position: relative;
-                display: block;
-                margin: 2rem auto;
-                left: auto !important;
-                right: auto !important;
-                top: auto !important;
-                bottom: auto !important;
-                transform: none !important;
+            .text {
+                max-width: 100%;
+
+                h1 {
+                    font-size: 24px;
+                }
+
+                h3 {
+                    font-size: 18px;
+                }
+
+                p {
+                    font-size: 16px;
+                }
+            }
+        }
+
+        .reverse.step-two {
+            left: 0 !important;
+
+        }
+    }
+
+
+    @media (max-width: 500px) {
+        .paw {
+            display: none;
+
+        }
+
+        .text {
+            h1 {
+                font-size: 20px;
+            }
+
+            h3 {
+                font-size: 16px;
+            }
+
+            p {
+                font-size: 14px;
             }
         }
     }
