--- a/src/pages/home/Homepage.scss
+++ b/src/pages/home/Homepage.scss
@@ -79,7 +79,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 400px;
+        max-width: 345px;
     }
 }
 
@@ -141,6 +141,7 @@
         flex: 1;
         justify-content: space-evenly;
         flex-wrap: wrap;
+        gap: 20px;
     }
 
     .pet-card {
@@ -164,8 +165,7 @@
             max-width: 364px;
             height: 289px;
             object-fit: cover;
-            border-top-left-radius: 12px;
-            border-top-right-radius: 12px;
+            border-radius: 12px;
             width: 100%;
             border-radius: 12px;
         }
@@ -187,7 +187,6 @@
         .pet-location {
             font-size: 24px;
             font-weight: 500;
-
             color: #000000;
         }
 
@@ -199,7 +198,7 @@
             margin-top: 10px;
             cursor: pointer;
             font-weight: 500;
-            width: 305px;
+            width: 276px;
             height: 50px;
 
             &:hover {
@@ -208,9 +207,6 @@
         }
     }
 }
-
-
-
 .whychoose {
 
 
