--- a/src/pages/browsepets/BrowsePets.scss
+++ b/src/pages/browsepets/BrowsePets.scss
@@ -121,7 +121,7 @@
 
       .view-btn {
         background: #FFD34D;
-        padding: 0.5rem 4.3rem;
+        padding: 8px 60px;
         border: none;
         border-radius: 6px;
         font-weight: 600;
